[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/grid.png" type="Texture" id=1]
[ext_resource path="res://sprites/bg.png" type="Texture" id=2]
[ext_resource path="res://Fonts/prstart.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/GameScene.gd" type="Script" id=4]
[ext_resource path="res://sprites/X.png" type="Texture" id=5]
[ext_resource path="res://sprites/O.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.3134, 40.2521 )

[node name="GameScene" type="Node2D"]
position = Vector2( 300, 375 )
script = ExtResource( 4 )

[node name="SpriteBackground" type="Sprite" parent="."]
position = Vector2( 0.520874, 24.0352 )
scale = Vector2( 600, 800 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 156 )
texture = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PanelStatus" type="Panel" parent="HUD"]
margin_left = 15.0
margin_top = 70.0
margin_right = 590.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlStatus" type="RichTextLabel" parent="HUD/PanelStatus"]
margin_left = 5.0
margin_top = 5.0
margin_right = 562.0
margin_bottom = 27.0
custom_fonts/normal_font = SubResource( 1 )
text = "WAITING FOR OPPONENT TO JOIN..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer1" type="Panel" parent="HUD"]
margin_left = 15.0
margin_top = 109.0
margin_right = 227.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlLocalPlayer" type="RichTextLabel" parent="HUD/PanelPlayer1"]
margin_left = 4.0
margin_top = 5.0
margin_right = 201.0
margin_bottom = 45.0
custom_fonts/normal_font = SubResource( 1 )
text = "LOCAL PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer2" type="Panel" parent="HUD"]
margin_left = 375.0
margin_top = 109.0
margin_right = 590.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlRemotePlayer" type="RichTextLabel" parent="HUD/PanelPlayer2"]
margin_left = 4.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 45.0
custom_fonts/normal_font = SubResource( 1 )
text = "REMOTE PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer1Wins" type="Panel" parent="HUD"]
margin_left = 15.0
margin_top = 138.0
margin_right = 227.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlTextLocalPlayerWins" type="RichTextLabel" parent="HUD/PanelPlayer1Wins"]
margin_left = 5.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 1 )
text = "WINS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlLocalPlayerWins" type="RichTextLabel" parent="HUD/PanelPlayer1Wins"]
margin_left = 101.0
margin_top = 4.0
margin_right = 208.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelCatWins" type="Panel" parent="HUD"]
margin_left = 212.0
margin_top = 170.0
margin_right = 394.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlTextTies" type="RichTextLabel" parent="HUD/PanelCatWins"]
margin_left = 5.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 1 )
text = "TIES:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlTotalTies" type="RichTextLabel" parent="HUD/PanelCatWins"]
margin_left = 101.0
margin_top = 4.0
margin_right = 175.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer2Wins" type="Panel" parent="HUD"]
margin_left = 375.0
margin_top = 138.0
margin_right = 587.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlTextRemotePlayerWins" type="RichTextLabel" parent="HUD/PanelPlayer2Wins"]
margin_left = 4.52972
margin_top = 4.0
margin_right = 85.5297
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 1 )
text = "WINS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlRemotePlayerWins" type="RichTextLabel" parent="HUD/PanelPlayer2Wins"]
margin_left = 100.0
margin_top = 4.0
margin_right = 206.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelIpOfHost" type="Panel" parent="HUD"]
visible = false
margin_left = 15.0
margin_top = 754.0
margin_right = 590.0
margin_bottom = 780.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlTextHostIP" type="RichTextLabel" parent="HUD/PanelIpOfHost"]
margin_left = 5.0
margin_top = 5.0
margin_right = 161.0
margin_bottom = 27.0
custom_fonts/normal_font = SubResource( 1 )
text = "HOST IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlIPAddress" type="RichTextLabel" parent="HUD/PanelIpOfHost"]
margin_left = 164.0
margin_top = 5.0
margin_right = 562.0
margin_bottom = 27.0
custom_fonts/normal_font = SubResource( 1 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_ServerPlayerIcon" type="Sprite" parent="HUD"]
position = Vector2( 110, 245 )
texture = ExtResource( 5 )

[node name="O_PeerPlayerIcon" type="Sprite" parent="HUD"]
position = Vector2( 480, 245 )
texture = ExtResource( 6 )

[node name="GameMovePositions" type="CanvasLayer" parent="HUD"]

[node name="X_Pos1" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 213, 445 )
texture = ExtResource( 5 )

[node name="X_Pos2" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 300, 445 )
texture = ExtResource( 5 )

[node name="X_Pos3" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 387, 445 )
texture = ExtResource( 5 )

[node name="X_Pos4" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 213, 532 )
texture = ExtResource( 5 )

[node name="X_Pos5" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 300, 532 )
texture = ExtResource( 5 )

[node name="X_Pos6" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 387, 532 )
texture = ExtResource( 5 )

[node name="X_Pos7" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 213, 619 )
texture = ExtResource( 5 )

[node name="X_Pos8" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 300, 619 )
texture = ExtResource( 5 )

[node name="X_Pos9" type="Sprite" parent="HUD/GameMovePositions"]
visible = false
position = Vector2( 387, 619 )
texture = ExtResource( 5 )

[node name="btnNewGame" type="Button" parent="HUD"]
visible = false
margin_left = 195.811
margin_top = 304.616
margin_right = 412.811
margin_bottom = 366.616
custom_fonts/font = SubResource( 3 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveButtons" type="Node" parent="."]

[node name="Pos1" type="Area2D" parent="MoveButtons"]
position = Vector2( 214.187, 444.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos1"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos4" type="Area2D" parent="MoveButtons"]
position = Vector2( 214.187, 530.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos4"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos7" type="Area2D" parent="MoveButtons"]
position = Vector2( 214.187, 615.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos7"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos2" type="Area2D" parent="MoveButtons"]
position = Vector2( 301.187, 444.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos2"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos5" type="Area2D" parent="MoveButtons"]
position = Vector2( 301.187, 530.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos5"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos8" type="Area2D" parent="MoveButtons"]
position = Vector2( 301.187, 615.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos8"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos3" type="Area2D" parent="MoveButtons"]
position = Vector2( 388.187, 444.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos3"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos6" type="Area2D" parent="MoveButtons"]
position = Vector2( 388.187, 530.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos6"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Pos9" type="Area2D" parent="MoveButtons"]
position = Vector2( 388.187, 615.752 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveButtons/Pos9"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )
[connection signal="pressed" from="HUD/btnNewGame" to="." method="_on_btnNewGame_pressed"]
[connection signal="input_event" from="MoveButtons/Pos1" to="." method="_on_Pos1_input_event"]
[connection signal="input_event" from="MoveButtons/Pos4" to="." method="_on_Pos4_input_event"]
[connection signal="input_event" from="MoveButtons/Pos7" to="." method="_on_Pos7_input_event"]
[connection signal="input_event" from="MoveButtons/Pos2" to="." method="_on_Pos2_input_event"]
[connection signal="input_event" from="MoveButtons/Pos5" to="." method="_on_Pos5_input_event"]
[connection signal="input_event" from="MoveButtons/Pos8" to="." method="_on_Pos8_input_event"]
[connection signal="input_event" from="MoveButtons/Pos3" to="." method="_on_Pos3_input_event"]
[connection signal="input_event" from="MoveButtons/Pos6" to="." method="_on_Pos6_input_event"]
[connection signal="input_event" from="MoveButtons/Pos9" to="." method="_on_Pos9_input_event"]
